# worker-motion-tracker

./: .gitignore  LICENSE  README.md
skeleton-detection-validation/: README.md  pyproject.toml
skeleton-detection-validation/data/images/: .gitkeep
skeleton-detection-validation/data/videos/: .gitkeep
skeleton-detection-validation/examples/: angle_measurement.py  cycle_measurement.py  gesture_detection.py  image_detection.py  video_detection.py  webcam_detection.py
skeleton-detection-validation/results/images/: .gitkeep
skeleton-detection-validation/results/reports/: .gitkeep
skeleton-detection-validation/results/videos/: .gitkeep
skeleton-detection-validation/src/skeleton_detection_validation/: __init__.py  base_detector.py  hand_gesture_detector.py  mediapipe_detector.py  utils.py
