[project]
name = "skeleton-detection-validation"
version = "0.1.0"
description = "OpenCV and MediaPipe skeleton detection validation"
readme = "README.md"
authors = [
    { name = "SeiyaTanaka@Classmethod", email = "tanaka.seiya@classmethod.jp" }
]
requires-python = ">=3.11,<3.13"
dependencies = [
    "opencv-python>=4.10.0",
    "mediapipe==0.10.9",
    "numpy>=1.24.0,<3.0.0",
    "matplotlib>=3.8.0",
    "pillow>=10.0.0",
]

[build-system]
requires = ["uv_build>=0.9.24,<0.10.0"]
build-backend = "uv_build"
